Integrate with angular data binding Academic tariff (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -1,1 +1,124 @@
 # FenixeduAcademicTreasuryResources - Portuguese Version
+
+#-----------------
+#GENERIC RESOURCES
+#-----------------*
+label.submit=Submeter
+label.close=Fechar
+label.confirmation=Confirmação
+label.delete=Remover
+label.cancel=Cancelar
+label.update=Actualizar
+label.noResultsFound=Não foram encontrados resultados.
+label.view=Ver
+label.details=Detalhes
+label.event.back=Voltar
+label.event.cancel=Cancelar
+label.event.update=Actualizar
+label.event.create=Criar
+label.event.delete=Remover
+label.true=Sim
+label.false=Não
+#---------------------------
+#END OF GENERIC RESOURCES
+#--------------------------*
+
+#--------------------------
+# ENTITY FIELDS TRANSLATION
+#--------------------------
+
+label.AcademicTariff.administrativeOffice=Secretaria
+label.AcademicTariff.endDate=Data de fim
+label.AcademicTariff.beginDate=Data de início
+label.AcademicTariff.degreeType=Tipo de curso
+label.AcademicTariff.degree=Curso
+label.AcademicTariff.cycleType=Ciclo
+label.AcademicTariff.baseAmount=Montante Base
+label.AcademicTariff.unitsForBase=Nº unidades base
+label.AcademicTariff.applyUnitsAmount=Aplicar valor para unidades adicionais
+label.AcademicTariff.unitAmount=Montante da unidade adicional
+label.AcademicTariff.applyPagesAmount=Aplicar valor para páginas
+label.AcademicTariff.pageAmount=Montante por página
+label.AcademicTariff.applyMaximumAmount=Aplicar valor máximo
+label.AcademicTariff.maximumAmount=Valor máximo
+label.AcademicTariff.applyUrgencyRate=Aplicar taxa de urgência
+label.AcademicTariff.urgencyRate=Taxa de urgência (%)
+label.AcademicTariff.applyLanguageTranslationRate=Aplicar taxa por tradução
+label.AcademicTariff.languageTranslationRate=Taxa por tradução (%)
+label.AcademicTariff.dueDateCalculationType=Data de vencimento
+label.AcademicTariff.fixedDueDate=Data Fixa
+label.AcademicTariff.numberOfDaysAfterCreationForDueDate=Nº dias
+label.AcademicTariff.applyInFirstWorkday=Aplicar no 1º dia útil
+label.AcademicTariff.applyInterests=Aplicar Juros
+label.AcademicTariff.interestType=Cálculo do juro
+label.AcademicTariff.numberOfDaysAfterDueDate=Dias após vencimento
+label.AcademicTariff.applyInFirstWorkday=Aplicar no 1º dia útil
+label.AcademicTariff.maximumDaysToApplyPenalty=Máximo de dias a aplicar
+label.AcademicTariff.maximumMonthsToApplyPenalty=Máximo de meses a aplicar
+label.AcademicTariff.interestFixedAmount=Montante de juro
+
+error.AcademicTariff.administrativeOffice.required=A secretaria é obrigatória.
+error.AcademicTariff.degree.required=O curso é obrigatório.
+error.AcademicTariff.degreeType.required=O tipo de curso é obrigatório.
+error.AcademicTariff.cycleType.does.not.belong.degree.type=O ciclo não pertence ao tipo de curso.
+error.AcademicTariff.baseAmount.required=O montante base é obrigatório.
+error.AcademicTariff.baseAmount.negative=O montante base não pode ser negativo.
+error.AcademicTariff.unitsForBase.negative=O montante da unidade não pode ser negativo.
+error.AcademicTariff.unitAmount.required=O montante da unidade adicional é obrigatório.
+error.AcademicTariff.unitAmount.negative=O montante da unidade adicional não pode ser negativo.
+error.AcademicTariff.pageAmount.required=O montante por página é obrigatório.
+error.AcademicTariff.pageAmount.negative=O montante por página não pode ser negativo.
+error.AcademicTariff.urgencyRate.required=A taxa de urgência é obrigatória.
+error.AcademicTariff.urgencyRate.negative=A taxa de urgência não pode ser negativa.
+error.AcademicTariff.urgencyRate.greater.than.hundred=A taxa de urgência não pode ser superior a 100%.
+error.AcademicTariff.languageTranslationRate.required=Taxa por tradução é obrigatória.
+error.AcademicTariff.languageTranslationRate.negative=A taxa por tradução não pode ser negativa.
+error.AcademicTariff.languageTranslationRate.greater.than.hundred=A taxa de tradução não pode ser superior a 100%.
+error.AcademicTariff.overlaps.with.other=A tarifa sobrepõe a outra deste emolumento. Verifique as datas de início e de fim.
+
+label.AcademicTariff.period=Período
+label.AcademicTariff.amount=Montante
+label.AcademicTariff.unitsForBase.view.singular={0} Unidade
+label.AcademicTariff.unitsForBase.view={0} Unidade
+label.AcademicTariff.interests=Juro
+label.AcademicTariff.interests.not.applied.message=Não são aplicados juros
+label.AcademicTariff.applyInFirstWorkday.view=Aplicar no 1º dia útil
+
+#---------------------------------
+# END OF ENTITY FIELDS TRANSLATION
+#---------------------------------
+
+title.AcademicTreasury=Tesouraria Académica
+
+title.manageEmoluments=Preçário de Emolumentos
+
+label.title.manageEmoluments=Preçário de Emolumentos
+
+# SearchScreen chooseFinantialEntity
+label.manageEmoluments.chooseFinantialEntity=Escolher Entidade Financeira
+
+label.FinantialEntity.name=Entidade Financeira
+label.manageEmoluments.chooseFinantialEntity.choose=Escolher
+
+# SearchScreen searchEmoluments
+label.manageEmoluments.searchEmoluments=Emolumentos
+label.manageEmoluments.searchEmoluments.confirmDelete=Deseja remover o emolumento?
+
+label.Product.name=Emolumento
+label.Product.code=Código
+
+# CreateScreen createEmolument
+label.manageEmoluments.createEmolument=Criar Emolumento
+
+# SearchScreen viewEmolumentTariffs
+label.manageEmoluments.viewEmolumentTariffs=Tarifários
+label.manageEmoluments.viewEmolumentTariffs.confirmDelete=Delete confirmation
+
+
+# CreateScreen createEmolumentTariff
+label.manageEmoluments.createEmolumentTariff=Criar tarifário
+# ReadScreen viewEmolumentTariff
+label.manageEmoluments.viewEmolumentTariff=ViewEmolumentTariff
+label.manageEmoluments.viewEmolumentTariff.confirmDelete=Delete confirmation
+# UpdateScreen updateEmolumentTariff
+label.manageEmoluments.updateEmolumentTariff=UpdateEmolumentTariff
