DebitEntry creation in AcademicTariff AcademicTreasuryEvent AcademicServiceRequest emolument creation (event and debit entry) PersonCustomer Mapping between ServiceRequestType and Product (ServiceRequestMapEntry)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -84,6 +84,19 @@ label.AcademicTariff.interests=Juro
 label.AcademicTariff.interests.not.applied.message=Não são aplicados juros
 label.AcademicTariff.applyInFirstWorkday.view=Aplicar no 1º dia útil
 
+label.ServiceRequestMapEntry.product=Produto
+label.ServiceRequestMapEntry.serviceRequestType=Serviço Académico
+label.ServiceRequestMapEntry.serviceRequestTypeOptions=Opções
+label.ServiceRequestMapEntry.createEventOnSituation=Lançar emolumento no estado
+label.ServiceRequestMapEntry.create.success=O mapeamento foi criado com sucesso.
+label.ServiceRequestMapEntry.delete.success=O mapeamento foi removido com sucesso.
+
+error.ServiceRequestMapEntry.duplicate.entry=O mapeamento é duplicado de outro mapeamento.
+error.ServiceRequestMapEntry.createEventOnSituation.required=È obrigatório indicar o estado no qual o emolumento é lançado
+error.ServiceRequestMapEntry.serviceRequestType.required=É obrigatório indicar o serviço académico.
+error.ServiceRequestMapEntry.product.required=É obrigatório indicar o produto.
+
+
 #---------------------------------
 # END OF ENTITY FIELDS TRANSLATION
 #---------------------------------
@@ -122,3 +135,12 @@ label.manageEmoluments.viewEmolumentTariff=ViewEmolumentTariff
 label.manageEmoluments.viewEmolumentTariff.confirmDelete=Delete confirmation
 # UpdateScreen updateEmolumentTariff
 label.manageEmoluments.updateEmolumentTariff=UpdateEmolumentTariff
+
+
+label.title.manageServiceRequestMapEntry=Mapeamento de Produtos para Serviços Académicos
+
+label.manageServiceRequestMapEntry.searchServiceRequestMapEntry=Mapeamento de Produtos para Serviços Académicos
+label.manageServiceRequestMapEntry.searchServiceRequestMapEntry.confirmDelete=Deseja remover o mapeamento?
+
+label.manageServiceRequestMapEntry.createServiceRequestMapEntry=Criar Mapeamento de Produto para Serviço Académico
+
