Properties Map on treasury event and debit entry about academic conditions

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -75,6 +75,7 @@ error.AcademicTariff.languageTranslationRate.required=Taxa por tradução é obriga
 error.AcademicTariff.languageTranslationRate.negative=A taxa por tradução não pode ser negativa.
 error.AcademicTariff.languageTranslationRate.greater.than.hundred=A taxa de tradução não pode ser superior a 100%.
 error.AcademicTariff.overlaps.with.other=A tarifa sobrepõe a outra deste emolumento. Verifique as datas de início e de fim.
+label.AcademicTariff.delete.success=A tarifa foi removida com sucesso.
 
 label.AcademicTariff.period=Período
 label.AcademicTariff.amount=Montante
@@ -96,6 +97,31 @@ error.ServiceRequestMapEntry.createEventOnSituation.required=È obrigatório indic
 error.ServiceRequestMapEntry.serviceRequestType.required=É obrigatório indicar o serviço académico.
 error.ServiceRequestMapEntry.product.required=É obrigatório indicar o produto.
 
+label.FinantialEntity.name=Entidade Financeira
+
+label.Product.name=Emolumento
+label.Product.code=Código
+
+label.AcademicTreasuryEventKeys.ACADEMIC_SERVICE_REQUEST_NAME=Serviço Académico
+label.AcademicTreasuryEventKeys.EXECUTION_YEAR=Ano Lectivo
+label.AcademicTreasuryEventKeys.DETAILED=Discriminado
+label.AcademicTreasuryEventKeys.URGENT=Urgente
+label.AcademicTreasuryEventKeys.LANGUAGE=Lingua
+label.AcademicTreasuryEventKeys.BASE_AMOUNT=Montante base
+label.AcademicTreasuryEventKeys.UNITS_FOR_BASE=Nº unidades base
+label.AcademicTreasuryEventKeys.UNIT_AMOUNT=Montante da unidade adicional
+label.AcademicTreasuryEventKeys.ADDITIONAL_UNITS=Nº unidades adicionais
+label.AcademicTreasuryEventKeys.CALCULATED_UNITS_AMOUNT=Montante das unidades adicionais
+label.AcademicTreasuryEventKeys.PAGE_AMOUNT=Montante por página
+label.AcademicTreasuryEventKeys.NUMBER_OF_PAGES=Nº de páginas
+label.AcademicTreasuryEventKeys.CALCULATED_PAGES_AMOUNT=Montante das páginas
+label.AcademicTreasuryEventKeys.MAXIMUM_AMOUNT=Montante máximo
+label.AcademicTreasuryEventKeys.AMOUNT_WITHOUT_RATES=Montante sem taxas
+label.AcademicTreasuryEventKeys.FOREIGN_LANGUAGE_RATE=Taxa por tradução
+label.AcademicTreasuryEventKeys.CALCULATED_FOREIGN_LANGUAGE_RATE=Montante da taxa por tradução
+label.AcademicTreasuryEventKeys.URGENT_PERCENTAGE=Taxa por urgência
+label.AcademicTreasuryEventKeys.CALCULATED_URGENT_AMOUNT=Montante da taxa de urgência
+label.AcademicTreasuryEventKeys.FINAL_AMOUNT=Montante final
 
 #---------------------------------
 # END OF ENTITY FIELDS TRANSLATION
@@ -110,15 +136,12 @@ label.title.manageEmoluments=Preçário de Emolumentos
 # SearchScreen chooseFinantialEntity
 label.manageEmoluments.chooseFinantialEntity=Escolher Entidade Financeira
 
-label.FinantialEntity.name=Entidade Financeira
 label.manageEmoluments.chooseFinantialEntity.choose=Escolher
 
 # SearchScreen searchEmoluments
 label.manageEmoluments.searchEmoluments=Emolumentos
 label.manageEmoluments.searchEmoluments.confirmDelete=Deseja remover o emolumento?
 
-label.Product.name=Emolumento
-label.Product.code=Código
 
 # CreateScreen createEmolument
 label.manageEmoluments.createEmolument=Criar Emolumento
