Tuition payment plans (WIP) Implement Tariff.getUiTariffDescription in AcademicTariff (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -101,6 +101,7 @@ label.FinantialEntity.name=Entidade Financeira
 
 label.Product.name=Emolumento
 label.Product.code=Código
+label.Product.vatType=Taxa de IVA
 
 label.AcademicTreasuryEventKeys.ACADEMIC_SERVICE_REQUEST_NAME=Serviço Académico
 label.AcademicTreasuryEventKeys.EXECUTION_YEAR=Ano Lectivo
@@ -122,6 +123,25 @@ label.AcademicTreasuryEventKeys.CALCULATED_FOREIGN_LANGUAGE_RATE=Montante da tax
 label.AcademicTreasuryEventKeys.URGENT_PERCENTAGE=Taxa por urgência
 label.AcademicTreasuryEventKeys.CALCULATED_URGENT_AMOUNT=Montante da taxa de urgência
 label.AcademicTreasuryEventKeys.FINAL_AMOUNT=Montante final
+
+label.TuitionPaymentPlanGroup.name=Nome
+label.TuitionPaymentPlanGroup.code=Código
+label.TuitionPaymentPlanGroup.creation.success=O tipo de propina foi criado com sucesso.
+
+
+label.TuitionPaymentPlan.paymentPlanName=Propina para %s (%s)
+label.TuitionPaymentPlan.paymentPlanName.customized=Propina para %s (%s) [%s]
+
+TuitionCalculationType.FIXED_AMOUNT=Montante Fixo
+TuitionCalculationType.ECTS=ECTS
+TuitionCalculationType.UNITS=Disciplinas
+
+EctsCalculationType.FIXED_AMOUNT=Montante Fixo
+EctsCalculationType.DEFAULT_PAYMENT_PLAN_INDEXED=Indexado ao plano principal
+
+label.TuitionInstallmentTariff.amountByEcts={0} por ECTS
+label.TuitionInstallmentTariff.defaultPaymentPlanIndexed.ectsParameters=(Factor={0}, ECTS Anuais={1})
+label.TuitionInstallmentTariff.defaultPaymentPlanIndexed.unitsParameters=(Factor={0}, Disciplinas Anuais={1})
 
 #---------------------------------
 # END OF ENTITY FIELDS TRANSLATION
@@ -166,4 +186,24 @@ label.manageServiceRequestMapEntry.searchServiceRequestMapEntry=Mapeamento de Pr
 label.manageServiceRequestMapEntry.searchServiceRequestMapEntry.confirmDelete=Deseja remover o mapeamento?
 
 label.manageServiceRequestMapEntry.createServiceRequestMapEntry=Criar Mapeamento de Produto para Serviço Académico
+
+
+
+### TuitionPaymentPlanGroup ###
+
+label.title.manageTuitionPaymentPlanGroup=Tipos de Propina
+
+# SearchScreen searchTuitionPaymentPlanGroup
+label.manageTuitionPaymentPlanGroup.searchTuitionPaymentPlanGroup=Tipos de Propina
+label.manageTuitionPaymentPlanGroup.searchTuitionPaymentPlanGroup.confirmDelete=Deseja remover o tipo de propina?
+
+# ReadScreen readTuitionPaymentPlanGroup
+label.manageTuitionPaymentPlanGroup.readTuitionPaymentPlanGroup=Detalhe do Tipo de Propina
+label.manageTuitionPaymentPlanGroup.readTuitionPaymentPlanGroup.confirmDelete=Deseja remover o tipo de propina?
+
+# CreateScreen createTuitionPaymentPlanGroup
+label.manageTuitionPaymentPlanGroup.createTuitionPaymentPlanGroup=Criar Tipo de Propina
+
+# UpdateScreen updateTuitionPaymentPlanGroup
+label.manageTuitionPaymentPlanGroup.updateTuitionPaymentPlanGroup=Actualizar o Tipo de Propina
 
