Tuition payment plans (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -19,6 +19,9 @@ label.event.create=Criar
 label.event.delete=Remover
 label.true=Sim
 label.false=Não
+label.continue=Continuar
+label.add=Adicionar
+
 #---------------------------
 #END OF GENERIC RESOURCES
 #--------------------------*
@@ -52,7 +55,6 @@ label.AcademicTariff.applyInFirstWorkday=Aplicar no 1º dia útil
 label.AcademicTariff.applyInterests=Aplicar Juros
 label.AcademicTariff.interestType=Cálculo do juro
 label.AcademicTariff.numberOfDaysAfterDueDate=Dias após vencimento
-label.AcademicTariff.applyInFirstWorkday=Aplicar no 1º dia útil
 label.AcademicTariff.maximumDaysToApplyPenalty=Máximo de dias a aplicar
 label.AcademicTariff.maximumMonthsToApplyPenalty=Máximo de meses a aplicar
 label.AcademicTariff.interestFixedAmount=Montante de juro
@@ -131,6 +133,19 @@ label.TuitionPaymentPlanGroup.creation.success=O tipo de propina foi criado com 
 
 label.TuitionPaymentPlan.paymentPlanName=Propina para %s (%s)
 label.TuitionPaymentPlan.paymentPlanName.customized=Propina para %s (%s) [%s]
+label.TuitionPaymentPlan.delete.plan=Remover plano
+label.TuitionPaymentPlan.executionYear=Ano Lectivo
+label.TuitionPaymentPlan.degreeType=Tipo de Curso
+label.TuitionPaymentPlan.degreeCurricularPlans=Planos Curriculares
+label.TuitionPaymentPlan.defaultPaymentPlan=Plano Principal
+label.TuitionPaymentPlan.registrationRegimeType=Regime
+label.TuitionPaymentPlan.registrationProtocol=Acordo
+label.TuitionPaymentPlan.ingression=Ingresso
+label.TuitionPaymentPlan.curricularYear=Ano Curricular
+label.TuitionPaymentPlan.curricularSemester=Semestre Curricular
+label.TuitionPaymentPlan.firstTimeStudent=1º ano 1º vez
+label.TuitionPaymentPlan.customized=Customizado
+label.TuitionPaymentPlan.customizedName=Nome do Plano
 
 TuitionCalculationType.FIXED_AMOUNT=Montante Fixo
 TuitionCalculationType.ECTS=ECTS
@@ -139,9 +154,36 @@ TuitionCalculationType.UNITS=Disciplinas
 EctsCalculationType.FIXED_AMOUNT=Montante Fixo
 EctsCalculationType.DEFAULT_PAYMENT_PLAN_INDEXED=Indexado ao plano principal
 
-label.TuitionInstallmentTariff.amountByEcts={0} por ECTS
+label.TuitionInstallmentTariff.beginDate=Início
+label.TuitionInstallmentTariff.dueDate=Data de Vencimento
+label.TuitionInstallmentTariff.interests=Juro
+label.TuitionInstallmentTariff.amountPerEcts={0} por ECTS
+label.TuitionInstallmentTariff.amountPerUnit={0} por disciplina
 label.TuitionInstallmentTariff.defaultPaymentPlanIndexed.ectsParameters=(Factor={0}, ECTS Anuais={1})
 label.TuitionInstallmentTariff.defaultPaymentPlanIndexed.unitsParameters=(Factor={0}, Disciplinas Anuais={1})
+label.TuitionInstallmentTariff.calculatedAutomaticaly=(Calculado automáticamente)
+label.TuitionInstallmentTariff.daysAfterCreation={0} dias após a criação do item de dívida
+label.TuitionInstallmentTariff.interests.not.applied=Juro não aplicado
+label.TuitionInstallmentTariff.numberOfDaysAfterCreationForDueDate=Nº dias após data de vencimento
+label.TuitionInstallmentTariff.applyInFirstWorkday=Aplicar no 1º dia útil
+label.TuitionInstallmentTariff.maximumDaysToApplyPenalty=Máximo de dias a aplicar
+label.TuitionInstallmentTariff.maximumMonthsToApplyPenalty=Máximo de meses a aplicar
+label.TuitionInstallmentTariff.interestFixedAmount=Montante de juro
+label.TuitionInstallmentTariff.tuitionCalculationType=Forma de Cálculo
+label.TuitionInstallmentTariff.fixedAmount=Montante
+label.TuitionInstallmentTariff.ectsCalculationType=Cálculo do montante ({0})
+label.TuitionInstallmentTariff.factor=Factor
+label.TuitionInstallmentTariff.totalEctsOrUnits=Total ({0} por ano lectivo)
+label.TuitionInstallmentTariff.beginDate=Data de início
+label.TuitionInstallmentTariff.dueDateCalculationType=Data de vencimento
+label.TuitionInstallmentTariff.endDate=Data de Fim
+label.TuitionInstallmentTariff.applyInterests=Aplicar Juros
+label.TuitionInstallmentTariff.interestType=Cálculo do juro
+label.TuitionInstallmentTariff.numberOfDaysAfterDueDate=Dias após vencimento
+label.TuitionInstallmentTariff.rate=Taxa
+label.TuitionInstallmentTariff.installmentOrder=Nº Prestação
+label.TuitionInstallmentTariff.amount=Montante
+label.TuitionInstallmentTariff.installments.empty=Não foram adicionadas prestações.
 
 #---------------------------------
 # END OF ENTITY FIELDS TRANSLATION
@@ -207,3 +249,18 @@ label.manageTuitionPaymentPlanGroup.createTuitionPaymentPlanGroup=Criar Tipo de 
 # UpdateScreen updateTuitionPaymentPlanGroup
 label.manageTuitionPaymentPlanGroup.updateTuitionPaymentPlanGroup=Actualizar o Tipo de Propina
 
+
+### TuitionPaymentPlan ###
+
+label.title.manageTuitionPaymentPlan=Planos de Propinas
+
+label.manageTuitionPaymentPlan.chooseFinantialEntity=Escolher Entidade Financeira
+label.manageTuitionPaymentPlan.chooseFinantialEntity.choose=Escolher
+label.manageTuitionPaymentPlan.chooseDegreeCurricularPlan=Visualizar Planos de Propinas
+label.manageTuitionPaymentPlan.chooseDegreeCurricularPlan.choose=Escolher
+label.manageTuitionPaymentPlan.createChooseDegreeCurricularPlans=Escolher Planos Curriculares
+label.manageTuitionPaymentPlan.createTuitionPaymentPlan=Criar Planos de Propinas
+label.manageTuitionPaymentPlan.createInsertInstallments=Inserir Prestações
+label.manageTuitionPaymentPlan.installments=Prestações
+
+label.DegreeCurricularPlan.degreeTypeName=Tipo de Curso
