Tuition payment plans (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -130,7 +130,6 @@ label.TuitionPaymentPlanGroup.name=Nome
 label.TuitionPaymentPlanGroup.code=Código
 label.TuitionPaymentPlanGroup.creation.success=O tipo de propina foi criado com sucesso.
 
-
 label.TuitionPaymentPlan.paymentPlanName=Propina para %s (%s)
 label.TuitionPaymentPlan.paymentPlanName.customized=Propina para %s (%s) [%s]
 label.TuitionPaymentPlan.delete.plan=Remover plano
@@ -158,13 +157,13 @@ label.TuitionInstallmentTariff.beginDate=Início
 label.TuitionInstallmentTariff.dueDate=Data de Vencimento
 label.TuitionInstallmentTariff.interests=Juro
 label.TuitionInstallmentTariff.amountPerEcts={0} por ECTS
-label.TuitionInstallmentTariff.amountPerUnit={0} por disciplina
+label.TuitionInstallmentTariff.amountPerUnits={0} por disciplina
 label.TuitionInstallmentTariff.defaultPaymentPlanIndexed.ectsParameters=(Factor={0}, ECTS Anuais={1})
 label.TuitionInstallmentTariff.defaultPaymentPlanIndexed.unitsParameters=(Factor={0}, Disciplinas Anuais={1})
 label.TuitionInstallmentTariff.calculatedAutomaticaly=(Calculado automáticamente)
 label.TuitionInstallmentTariff.daysAfterCreation={0} dias após a criação do item de dívida
 label.TuitionInstallmentTariff.interests.not.applied=Juro não aplicado
-label.TuitionInstallmentTariff.numberOfDaysAfterCreationForDueDate=Nº dias após data de vencimento
+label.TuitionInstallmentTariff.numberOfDaysAfterCreationForDueDate=Nº dias após vencimento
 label.TuitionInstallmentTariff.applyInFirstWorkday=Aplicar no 1º dia útil
 label.TuitionInstallmentTariff.maximumDaysToApplyPenalty=Máximo de dias a aplicar
 label.TuitionInstallmentTariff.maximumMonthsToApplyPenalty=Máximo de meses a aplicar
@@ -176,11 +175,11 @@ label.TuitionInstallmentTariff.factor=Factor
 label.TuitionInstallmentTariff.totalEctsOrUnits=Total ({0} por ano lectivo)
 label.TuitionInstallmentTariff.beginDate=Data de início
 label.TuitionInstallmentTariff.dueDateCalculationType=Data de vencimento
-label.TuitionInstallmentTariff.endDate=Data de Fim
+label.TuitionInstallmentTariff.endDate=Data fixa para vencimento
 label.TuitionInstallmentTariff.applyInterests=Aplicar Juros
 label.TuitionInstallmentTariff.interestType=Cálculo do juro
 label.TuitionInstallmentTariff.numberOfDaysAfterDueDate=Dias após vencimento
-label.TuitionInstallmentTariff.rate=Taxa
+label.TuitionInstallmentTariff.rate=Taxa (%)
 label.TuitionInstallmentTariff.installmentOrder=Nº Prestação
 label.TuitionInstallmentTariff.amount=Montante
 label.TuitionInstallmentTariff.installments.empty=Não foram adicionadas prestações.
@@ -262,5 +261,6 @@ label.manageTuitionPaymentPlan.createChooseDegreeCurricularPlans=Escolher Planos
 label.manageTuitionPaymentPlan.createTuitionPaymentPlan=Criar Planos de Propinas
 label.manageTuitionPaymentPlan.createInsertInstallments=Inserir Prestações
 label.manageTuitionPaymentPlan.installments=Prestações
+label.manageTuitionPaymentPlan.installments.new=Nova Prestação
 
 label.DegreeCurricularPlan.degreeTypeName=Tipo de Curso
