Tuition payment plans (WIP) Create tuition debit entries (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -125,6 +125,16 @@ label.AcademicTreasuryEventKeys.CALCULATED_FOREIGN_LANGUAGE_RATE=Montante da tax
 label.AcademicTreasuryEventKeys.URGENT_PERCENTAGE=Taxa por urgência
 label.AcademicTreasuryEventKeys.CALCULATED_URGENT_AMOUNT=Montante da taxa de urgência
 label.AcademicTreasuryEventKeys.FINAL_AMOUNT=Montante final
+label.AcademicTreasuryEventKeys.TUITION_CALCULATION_TYPE=Forma de cálculo
+label.AcademicTreasuryEventKeys.FIXED_AMOUNT=Montante fixo
+label.AcademicTreasuryEventKeys.ECTS_CREDITS=Créditos ECTS
+label.AcademicTreasuryEventKeys.AMOUNT_PER_ECTS=Montante por ECTS
+label.AcademicTreasuryEventKeys.ENROLLED_COURSES=Nº de inscrições
+label.AcademicTreasuryEventKeys.AMOUNT_PER_COURSE=Montante por inscrição
+label.AcademicTreasuryEventKeys.DUE_DATE=Data de vencimento
+label.AcademicTreasuryEventKeys.DEGREE=Curso
+label.AcademicTreasuryEventKeys.DEGREE_CURRICULAR_PLAN=Plano Curricular
+
 
 label.TuitionPaymentPlanGroup.name=Nome
 label.TuitionPaymentPlanGroup.code=Código
@@ -145,6 +155,18 @@ label.TuitionPaymentPlan.curricularSemester=Semestre Curricular
 label.TuitionPaymentPlan.firstTimeStudent=1º ano 1º vez
 label.TuitionPaymentPlan.customized=Customizado
 label.TuitionPaymentPlan.customizedName=Nome do Plano
+label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan={0} planos criados
+label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.only.one=1 plano criado
+label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.zero=Sem planos criados
+
+error.TuitionPaymentPlan.tuitionPaymentPlanGroup.required=O tipo de propina é obrigatório.
+error.TuitionPaymentPlan.executionYear.required=O ano lectivo é obrigatório.
+error.TuitionPaymentPlan.degreeCurricularPlan.required=O plano curricular do curso é obrigatório.
+error.TuitionPaymentPlan.customized.required.name=O nome do plano é obrigatório.
+error.TuitionPaymentPlan.default.payment.plan.must.be.for.registration=Apenas os planos de propinas para matrículas podem ser principais.
+error.TuitionPaymentPlan.default.payment.plan.tariffs.calculation.type.not.fixed.amount=Os planos de propinas principais só podem ter prestações de valor fixo.
+error.TuitionPaymentPlan.defaultPaymentPlan.not.unique=Já existe um plano de propinas principal para o plano curricular e ano lectivo.
+error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas.
 
 TuitionCalculationType.FIXED_AMOUNT=Montante Fixo
 TuitionCalculationType.ECTS=ECTS
@@ -175,7 +197,7 @@ label.TuitionInstallmentTariff.factor=Factor
 label.TuitionInstallmentTariff.totalEctsOrUnits=Total ({0} por ano lectivo)
 label.TuitionInstallmentTariff.beginDate=Data de início
 label.TuitionInstallmentTariff.dueDateCalculationType=Data de vencimento
-label.TuitionInstallmentTariff.endDate=Data fixa para vencimento
+label.TuitionInstallmentTariff.fixedDueDate=Data fixa para vencimento
 label.TuitionInstallmentTariff.applyInterests=Aplicar Juros
 label.TuitionInstallmentTariff.interestType=Cálculo do juro
 label.TuitionInstallmentTariff.numberOfDaysAfterDueDate=Dias após vencimento
@@ -183,6 +205,24 @@ label.TuitionInstallmentTariff.rate=Taxa (%)
 label.TuitionInstallmentTariff.installmentOrder=Nº Prestação
 label.TuitionInstallmentTariff.amount=Montante
 label.TuitionInstallmentTariff.installments.empty=Não foram adicionadas prestações.
+
+label.TuitionInstallmentTariff.debitEntry.name.registration={0}º Prestação da Propina em {1} ({2})
+label.TuitionInstallmentTariff.debitEntry.name.standalone={0}º Prestação da Propina em Unidades Curriculares Isoladas ({1} - {2})
+label.TuitionInstallmentTariff.debitEntry.name.extracurricular={0}º Prestação da Propina em Unidades Extracurriculares ({1} - {2})
+
+error.TuitionInstallmentTariff.tuitionPaymentPlan.required=O plano de propinas é obrigatório.
+error.TuitionInstallmentTariff.installmentOrder.must.be.positive=A número da prestação tem de ser positiva.
+error.TuitionInstallmentTariff.tariff.installment.order.already.exists=Já existe uma prestação com o mesmo número.
+error.TuitionInstallmentTariff.tuitionCalculationType.required=A forma de cálculo é obrigatória.
+error.TuitionInstallmentTariff.ectsCalculationType.required=O cálculo do montante ({0}) é obrigatório.
+error.TuitionInstallmentTariff.fixedAmount.required=O montante é obrigatório. 
+error.TuitionInstallmentTariff.fixedAmount.must.be.positive=O montante tem de ser positivo.
+error.TuitionInstallmentTariff.factor.required=O factor é obrigatório.
+error.TuitionInstallmentTariff.totalEctsOrUnits.required=O total ({0} por ano lectivo) é obrigatório.
+error.TuitionInstallmentTariff.factor.must.be.positive=O factor tem de ser positivo.
+error.TuitionInstallmentTariff.totalEctsOrUnits.must.be.positive=O total ({0} por ano lectivo) tem de ser positivo.
+
+
 
 #---------------------------------
 # END OF ENTITY FIELDS TRANSLATION
