Tuition Tuition payment plans (WIP) Create tuition debit entries (WIP)

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -140,7 +140,7 @@ label.TuitionPaymentPlanGroup.name=Nome
 label.TuitionPaymentPlanGroup.code=Código
 label.TuitionPaymentPlanGroup.creation.success=O tipo de propina foi criado com sucesso.
 
-label.TuitionPaymentPlan.paymentPlanName=Propina para %s (%s)
+label.TuitionPaymentPlan.paymentPlanName=Propina para {0} ({1})
 label.TuitionPaymentPlan.paymentPlanName.customized=Propina para %s (%s) [%s]
 label.TuitionPaymentPlan.delete.plan=Remover plano
 label.TuitionPaymentPlan.executionYear=Ano Lectivo
@@ -302,5 +302,6 @@ label.manageTuitionPaymentPlan.createTuitionPaymentPlan=Criar Planos de Propinas
 label.manageTuitionPaymentPlan.createInsertInstallments=Inserir Prestações
 label.manageTuitionPaymentPlan.installments=Prestações
 label.manageTuitionPaymentPlan.installments.new=Nova Prestação
+label.manageTuitionPaymentPlan.searchTuitionPaymentPlan=Planos de Propinas do Curso
 
 label.DegreeCurricularPlan.degreeTypeName=Tipo de Curso
