Standalone Tuition payment plans (WIP) Create standalone tuition debit entries (WIP) Manage tuition payment plan groups

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -21,6 +21,7 @@ label.true=Sim
 label.false=Não
 label.continue=Continuar
 label.add=Adicionar
+label.confirm=Confirmar
 
 #---------------------------
 #END OF GENERIC RESOURCES
@@ -135,13 +136,21 @@ label.AcademicTreasuryEventKeys.DUE_DATE=Data de vencimento
 label.AcademicTreasuryEventKeys.DEGREE=Curso
 label.AcademicTreasuryEventKeys.DEGREE_CURRICULAR_PLAN=Plano Curricular
 
+error.Tariff.cannot.delete=Não é possível remover o tarifário. Verifique se não tem items de dívidas associadas.
 
 label.TuitionPaymentPlanGroup.name=Nome
 label.TuitionPaymentPlanGroup.code=Código
+label.TuitionPaymentPlanGroup.forRegistration=Aplicado a Matrículas
+label.TuitionPaymentPlanGroup.forStandalone=Aplicado a Unidades Curriculares Isoladas
+label.TuitionPaymentPlanGroup.forExtracurricular=Aplicado a Unidades Extracurriculares
+label.TuitionPaymentPlanGroup.currentProduct=Produto Actual Associado
+
 label.TuitionPaymentPlanGroup.creation.success=O tipo de propina foi criado com sucesso.
 
+error.TuitionPaymentPlanGroup.only.one.type.supported=Apenas é suportado um tipo. Verifique se encontra criado.
+
 label.TuitionPaymentPlan.paymentPlanName=Propina para {0} ({1})
-label.TuitionPaymentPlan.paymentPlanName.customized=Propina para %s (%s) [%s]
+label.TuitionPaymentPlan.paymentPlanName.customized=Propina para {0} ({1}) [{2}]
 label.TuitionPaymentPlan.delete.plan=Remover plano
 label.TuitionPaymentPlan.executionYear=Ano Lectivo
 label.TuitionPaymentPlan.degreeType=Tipo de Curso
@@ -158,6 +167,15 @@ label.TuitionPaymentPlan.customizedName=Nome do Plano
 label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan={0} planos criados
 label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.only.one=1 plano criado
 label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.zero=Sem planos criados
+label.TuitionPaymentPlan.tuition.installments.debit.entries.created.success=As prestações de propina foram criadas com sucesso.
+label.TuitionPaymentPlan.curricularYear.description= {0}º ano curricular
+label.TuitionPaymentPlan.curricularSemester.description={0}º semestre curricular
+label.TuitionPaymentPlan.deletion.success=O plano de propinas foi removido com sucesso.
+label.TuitionPaymentPlan.order.up.success=O plano foi ordenado com sucesso.
+label.TuitionPaymentPlan.order.down.success=O plano foi ordenado com sucesso.
+label.TuitionPaymentPlan.order.up=Ordenar para cima
+label.TuitionPaymentPlan.order.down=Ordenar para baixo
+label.TuitionPaymentPlan.empty.for.degree.curricular.plan=Não estão criados planos de propinas para este plano curricular
 
 error.TuitionPaymentPlan.tuitionPaymentPlanGroup.required=O tipo de propina é obrigatório.
 error.TuitionPaymentPlan.executionYear.required=O ano lectivo é obrigatório.
@@ -167,6 +185,9 @@ error.TuitionPaymentPlan.default.payment.plan.must.be.for.registration=Apenas os
 error.TuitionPaymentPlan.default.payment.plan.tariffs.calculation.type.not.fixed.amount=Os planos de propinas principais só podem ter prestações de valor fixo.
 error.TuitionPaymentPlan.defaultPaymentPlan.not.unique=Já existe um plano de propinas principal para o plano curricular e ano lectivo.
 error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas.
+error.TuitionPaymentPlan.installments.must.not.be.empty=O plano de propinas deve ter pelo menos uma prestação.
+error.TuitionPaymentPlan.delete.impossible=Não é possível remover o plano de propinas. Verifique se já foram criadas dívidas associadas as prestações das propinas.
+
 
 TuitionCalculationType.FIXED_AMOUNT=Montante Fixo
 TuitionCalculationType.ECTS=ECTS
@@ -221,8 +242,10 @@ error.TuitionInstallmentTariff.factor.required=O factor é obrigatório.
 error.TuitionInstallmentTariff.totalEctsOrUnits.required=O total ({0} por ano lectivo) é obrigatório.
 error.TuitionInstallmentTariff.factor.must.be.positive=O factor tem de ser positivo.
 error.TuitionInstallmentTariff.totalEctsOrUnits.must.be.positive=O total ({0} por ano lectivo) tem de ser positivo.
+label.TuitionInstallmentTariff.description=Prestação
+label.TuitionInstallmentTariff.vat=IVA (%)
 
-
+label.TupleDataSourceBean.select.description=Seleccione uma opção
 
 #---------------------------------
 # END OF ENTITY FIELDS TRANSLATION
@@ -274,6 +297,7 @@ label.manageServiceRequestMapEntry.createServiceRequestMapEntry=Criar Mapeamento
 
 label.title.manageTuitionPaymentPlanGroup=Tipos de Propina
 
+
 # SearchScreen searchTuitionPaymentPlanGroup
 label.manageTuitionPaymentPlanGroup.searchTuitionPaymentPlanGroup=Tipos de Propina
 label.manageTuitionPaymentPlanGroup.searchTuitionPaymentPlanGroup.confirmDelete=Deseja remover o tipo de propina?
@@ -292,6 +316,7 @@ label.manageTuitionPaymentPlanGroup.updateTuitionPaymentPlanGroup=Actualizar o T
 ### TuitionPaymentPlan ###
 
 label.title.manageTuitionPaymentPlan=Planos de Propinas
+label.title.manageTuitionPaymentPlanStandalone=Propinas para Curriculares Isoladas
 
 label.manageTuitionPaymentPlan.chooseFinantialEntity=Escolher Entidade Financeira
 label.manageTuitionPaymentPlan.chooseFinantialEntity.choose=Escolher
@@ -303,5 +328,19 @@ label.manageTuitionPaymentPlan.createInsertInstallments=Inserir Prestações
 label.manageTuitionPaymentPlan.installments=Prestações
 label.manageTuitionPaymentPlan.installments.new=Nova Prestação
 label.manageTuitionPaymentPlan.searchTuitionPaymentPlan=Planos de Propinas do Curso
+label.manageTuitionPaymentPlan.paymentPlan=Plano de Propinas
 
 label.DegreeCurricularPlan.degreeTypeName=Tipo de Curso
+label.DegreeCurricularPlan.executionYear=Ano Lectivo
+
+label.TuitionDebtCreationBean.create.tuition.debts=Lançar dívida de propina
+label.TuitionDebtCreationBean.registration=Matrícula
+label.TuitionDebtCreationBean.executionYear=Ano Lectivo
+label.TuitionDebtCreationBean.debtDate=Data de Lançamento
+label.TuitionDebtCreationBean.infered=Plano de Propinas Inferido?
+label.TuitionDebtCreationBean.tuitionPaymentPlan=Plano de Propinas
+label.TuitionDebtCreationBean.infer.select.registration.and.executionYear=Seleccione a matrícula e o ano lectivo.
+label.TuitionDebtCreationBean.infer.impossible=Não é possível inferir um plano de propinas. Verifique os planos criados para o plano curricular do aluno.
+
+label.TuitionDebtCreation.createTuitionDebtCreationBean=Lançar Dívida de Propina
+label.TuitionDebtCreation.confirmTuitionDebtCreation=Confirmar Lançamento da Dívida de Propina
