Refactor on TuitionPaymentPlan to associate with FinantialEntity TuitionInstallmentTariff may have different products from TuitionPaymentPlan

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -164,6 +164,7 @@ label.TuitionPaymentPlan.curricularSemester=Semestre Curricular
 label.TuitionPaymentPlan.firstTimeStudent=1º ano 1º vez
 label.TuitionPaymentPlan.customized=Customizado
 label.TuitionPaymentPlan.customizedName=Nome do Plano
+label.TuitionPaymentPlan.withLaboratorialClasses=Com componente laboratorial
 label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan={0} planos criados
 label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.only.one=1 plano criado
 label.TuitionPaymentPlan.tuition.count.on.degree.curricular.plan.zero=Sem planos criados
@@ -225,6 +226,7 @@ label.TuitionInstallmentTariff.numberOfDaysAfterDueDate=Dias após vencimento
 label.TuitionInstallmentTariff.rate=Taxa (%)
 label.TuitionInstallmentTariff.installmentOrder=Nº Prestação
 label.TuitionInstallmentTariff.amount=Montante
+label.TuitionInstallmentTariff.product=Produto
 label.TuitionInstallmentTariff.installments.empty=Não foram adicionadas prestações.
 
 label.TuitionInstallmentTariff.debitEntry.name.registration={0}º Prestação da Propina em {1} ({2})
