Fix create emolument (product) (WIP) Fix create emolument tariff Fix payment plan

--- a/src/main/resources/resources/AcademicTreasuryResources_pt.properties
+++ b/src/main/resources/resources/AcademicTreasuryResources_pt.properties
@@ -346,3 +346,12 @@ label.TuitionDebtCreationBean.infer.impossible=Não é possível inferir um plano d
 
 label.TuitionDebtCreation.createTuitionDebtCreationBean=Lançar Dívida de Propina
 label.TuitionDebtCreation.confirmTuitionDebtCreation=Confirmar Lançamento da Dívida de Propina
+
+
+label.title.manageAcademicTreasurySettings=Configuração Tesouraria Académica
+# ReadScreen readAcademicTreasurySettings
+label.manageAcademicTreasurySettings.readAcademicTreasurySettings=Configuração Tesouraria Académica
+# UpdateScreen updateAcademicTreasurySettings
+label.manageAcademicTreasurySettings.updateAcademicTreasurySettings=Actualizar
+label.AcademicTreasurySettings.emolumentsProductGroup=Grupo de produtos para emolumentos
+label.AcademicTreasurySettings.tuitionProductGroup=Grupo de produtos para propinas
